Add verbose flag to build step in deploy workflow
Enable detailed logging during the build process in the CI workflow. This aids in debugging and provides more insight into build-related issues.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         run: pnpm install
 
       - name: Build project
-        run: pnpm build
+        run: pnpm build --verbose
 
       - name: Sync S3 bucket
         env:
