Variable access in deploy workflow updated
Removed verbose flag from the build step to streamline output. Updated S3 sync command to use direct environment variable references for improved readability.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,12 +23,11 @@ jobs:
         run: pnpm install
 
       - name: Build project
-        run: pnpm build --verbose
+        run: pnpm build
 
       - name: Sync S3 bucket
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ env.AWS_REGION }}
-        run: |
-          aws s3 sync out ${{ env.S3_BUCKET_NAME }} --delete
+          AWS_REGION: $AWS_REGION
+        run: aws s3 sync out $S3_BUCKET_NAME --delete
