Add Next.js export and Amplify build configuration for AWS integration
Updated the build script to include `next export` for static site generation. Added an `amplify.yml` file to define build and cache processes for deployment on AWS Amplify, ensuring proper installation and output handling.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "next",
-    "build": "node ./scripts/gen-rss.js && next build",
+    "build": "node ./scripts/gen-rss.js && next build && next export",
     "start": "next start"
   },
   "dependencies": {
@@ -21,6 +21,5 @@
     "tabWidth": 2,
     "trailingComma": "none",
     "semi": false
-  },
-  "packageManager": "pnpm@10.5.0+sha512.11106a5916c7406fe4b8cb8e3067974b8728f47308a4f5ac5e850304afa6f57e2847d7950dfe78877d8d36bfb401d381c4215db3a4c3547ffa63c14333a6fa51"
+  }
 }
