--- a/amplify.yml
+++ b/amplify.yml
@@ -3,12 +3,10 @@ frontend:
   phases:
     preBuild:
       commands:
-        - corepack enable
-        - corepack prepare pnpm@10 --activate
-        - pnpm install
+        - npm install
     build:
       commands:
-        - pnpm build
+        - npm run build
   artifacts:
     baseDirectory: out
     files:
