--- a/amplify.yml
+++ b/amplify.yml
@@ -3,10 +3,12 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm install
+        - corepack enable
+        - corepack prepare pnpm@10 --activate
+        - pnpm install
     build:
       commands:
-        - npm run build
+        - pnpm build
   artifacts:
     baseDirectory: out
     files:
