--- a/amplify.yml
+++ b/amplify.yml
@@ -3,14 +3,10 @@ frontend:
   phases:
     preBuild:
       commands:
-        - ls -la  # List files in the directory (use `dir` if on Windows-based build image)
-        - cat package.json  # Print package.json contents
-        - corepack enable
-        - corepack prepare pnpm@10 --activate
-        - pnpm install
+        - npm install
     build:
       commands:
-        - pnpm build
+        - npm run build
   artifacts:
     baseDirectory: out
     files:
