--- a/amplify.yml
+++ b/amplify.yml
@@ -1,12 +1,10 @@
 version: 1
 frontend:
+  runtime: node18
   phases:
     preBuild:
       commands:
-        - ls -la  # List files in the directory (use `dir` if on Windows-based build image)
-        - cat package.json  # Print package.json contents
         - corepack enable
-        - corepack prepare pnpm@10 --activate
         - pnpm install
     build:
       commands:
