Update .gitignore to exclude feed, WebStorm, and env files
Added entries for public/feed.xml, /.idea/ (WebStorm), and .ENV to ensure generated files, IDE settings, and environment variables are not tracked by Git. This improves repository cleanliness and prevents accidental inclusion of sensitive data.

--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,11 @@ yarn-error.log*
 # vercel
 .vercel
 
+# The feed is generated
 public/feed.xml
+
+# WebStorm
 /.idea/
+
+# Environment Variables
+.ENV
