--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "gray-matter": "^4.0.3",
     "next": "^13.5.6",
     "nextra": "^2.13.2",
