Add PNPM configuration for managing built dependencies
Configured PNPM to ignore and include specific built dependencies, focusing on "aws-sdk". This ensures more precise dependency handling during the build process.

--- a/package.json
+++ b/package.json
@@ -23,5 +23,13 @@
     "tabWidth": 2,
     "trailingComma": "none",
     "semi": false
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "aws-sdk"
+    ],
+    "onlyBuiltDependencies": [
+      "aws-sdk"
+    ]
   }
 }
