--- a/amplify.yml
+++ b/amplify.yml
@@ -18,7 +18,7 @@ frontend:
       - node_modules/**/*
       - .next/cache/**/*
   customRules:
-    - source: '</^[^.]+$|\\.(?!(css|gif|ico|jpg|js|png|txt|svg|woff|ttf|map|json)$)([^.]+$)/'
+    - source: '<*>'
       target: '/404'
       status: '404'
       condition: 'NOT EXISTS'
